Added : admin template

--- a/Nosology.MVP/Nosology.MVP.Engine/Nosology.MVP.Engine.csproj
+++ b/Nosology.MVP/Nosology.MVP.Engine/Nosology.MVP.Engine.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Admin.cs" />
     <Compile Include="ContentService.cs" />
     <Compile Include="Loggers\StupidLogger.cs">
       <SubType>Code</SubType>
