--- a/Nosology.MVP/Nosology.MVP.UI.WebApp.Degrade/Web.config
+++ b/Nosology.MVP/Nosology.MVP.UI.WebApp.Degrade/Web.config
@@ -15,7 +15,6 @@
   </configSections>
   <appSettings/>
   <connectionStrings/>
-  
   <system.web>
     <!-- 
             Значение параметра compilation debug="true" означает, что в компилированную страницу будут вставлены 
@@ -23,7 +22,7 @@
             параметр влияет на производительность, следует задавать для него значение True 
             только на этапе разработки.
         -->
-    <compilation debug="false">
+    <compilation debug="true">
       <assemblies>
         <add assembly="System.Core, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
         <add assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
@@ -55,7 +54,7 @@
         </customErrors>
         -->
     <customErrors mode="RemoteOnly" defaultRedirect="~/pages/errors/common.aspx">
-      <error statusCode="404" redirect="~/pages/errors/FileNotFound.htm" />
+      <error statusCode="404" redirect="~/pages/errors/FileNotFound.htm"/>
     </customErrors>
     <pages>
       <controls>
@@ -78,15 +77,15 @@
         Internet Information Services 7.0.  Он не требуется для более ранней версии IIS.
     -->
   <system.codedom>
-      <compilers>
-        <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CSharp.CSharpCodeProvider, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" warningLevel="4">
-          <providerOption name="CompilerVersion" value="v3.5"/>
-          <providerOption name="WarnAsError" value="false"/>
+    <compilers>
+      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CSharp.CSharpCodeProvider, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" warningLevel="4">
+        <providerOption name="CompilerVersion" value="v3.5"/>
+        <providerOption name="WarnAsError" value="false"/>
       </compiler>
     </compilers>
   </system.codedom>
   <system.webServer>
-      <validation validateIntegratedModeConfiguration="false"/>
+    <validation validateIntegratedModeConfiguration="false"/>
     <modules>
       <remove name="ScriptModule"/>
       <add name="ScriptModule" preCondition="managedHandler" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
