--- a/src/Nosology.Data.Sql/Nosology.Data.Sql.csproj
+++ b/src/Nosology.Data.Sql/Nosology.Data.Sql.csproj
@@ -39,7 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Processors\SqlUserProcessor.cs" />
+    <Compile Include="QueryProcessors\SqlUserQueryProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
