--- a/src/Nosology.Web.App/Web.config
+++ b/src/Nosology.Web.App/Web.config
@@ -9,6 +9,15 @@
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.1" />
+    
+    <authentication mode="Forms">
+      <forms loginUrl="~/Default.aspx" name=".ASPXFORMSAUTH" defaultUrl="~/pages/main.aspx"/>
+    </authentication>
+    <!--
+    <authorization>
+      <deny users="?"/>
+    </authorization>
+    -->
     <httpRuntime targetFramework="4.5.1" />
     <pages>
       <namespaces>
@@ -28,7 +37,7 @@
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" culture="neutral" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
-      </dependentAssembly>      
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
