--- a/src/Nosology.Web.App/Nosology.Web.App.csproj
+++ b/src/Nosology.Web.App/Nosology.Web.App.csproj
@@ -134,13 +134,19 @@
     <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AuthenticationController.cs" />
+    <Compile Include="Controllers\DocumentsController.cs" />
+    <Compile Include="Controllers\DownloadsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\BaseItem.cs" />
+    <Compile Include="ViewModels\Document.cs" />
+    <Compile Include="ViewModels\DownloadableFile.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\documents.xml" />
     <Content Include="App_Data\main.txt" />
     <Content Include="Content\jDialog\jDialog.css" />
     <Content Include="Content\jDialog\jDialog.js" />
@@ -168,6 +174,8 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\login.js" />
+    <Content Include="Scripts\main.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
@@ -187,7 +195,9 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Shared\_Default.cshtml" />
     <Content Include="Views\Shared\_Main.cshtml" />
-    <Content Include="Views\Authentication\Login.cshtml" />
+    <Content Include="Views\Authentication\Index.cshtml" />
+    <Content Include="Views\Documents\Index.cshtml" />
+    <Content Include="Views\Downloads\Index.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
@@ -201,6 +211,10 @@
     <ProjectReference Include="..\Nosology.Data.Sql\Nosology.Data.Sql.csproj">
       <Project>{a74dd969-9364-4719-8e90-0ce3f8aa00d6}</Project>
       <Name>Nosology.Data.Sql</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Nosology.Data.Xml\Nosology.Data.Xml.csproj">
+      <Project>{72df5ba9-8247-4058-be09-9612b99e106f}</Project>
+      <Name>Nosology.Data.Xml</Name>
     </ProjectReference>
     <ProjectReference Include="..\Nosology.Data\Nosology.Data.csproj">
       <Project>{829fe671-5ba5-45be-a12d-8c0a9f077c19}</Project>
