--- a/src/Nosology.Data.Xml/Nosology.Data.Xml.csproj
+++ b/src/Nosology.Data.Xml/Nosology.Data.Xml.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D34144AD-C5C5-413C-823D-F957A35F59B2}</ProjectGuid>
+    <ProjectGuid>{72DF5BA9-8247-4058-BE09-9612B99E106F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Escyug.Nosology.Models</RootNamespace>
-    <AssemblyName>Nosology.Models</AssemblyName>
+    <RootNamespace>Escyug.Nosology.Data.Xml</RootNamespace>
+    <AssemblyName>Nosology.Data.Xml</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,33 +39,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Document.cs" />
-    <Compile Include="ModelBinder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\DocumentsRepository.cs" />
-    <Compile Include="Repositories\IDocumentsRepository.cs" />
-    <Compile Include="Repositories\IMainTextBlockRepository.cs" />
-    <Compile Include="Repositories\IUserRepository.cs" />
-    <Compile Include="Repositories\MainTextBlockRepository.cs" />
-    <Compile Include="Repositories\UserRepository.cs" />
-    <Compile Include="Services\ILoginService.cs" />
-    <Compile Include="Services\StupidLoginService.cs" />
-    <Compile Include="User.cs" />
+    <Compile Include="QueryProcessors\AllDocumentsQueryProcessor.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Nosology.Data.Sql\Nosology.Data.Sql.csproj">
-      <Project>{a74dd969-9364-4719-8e90-0ce3f8aa00d6}</Project>
-      <Name>Nosology.Data.Sql</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Nosology.Data\Nosology.Data.csproj">
       <Project>{829fe671-5ba5-45be-a12d-8c0a9f077c19}</Project>
       <Name>Nosology.Data</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Content Include="Repositories\_readme.txt" />
-  </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
