--- a/src/Nosology.Data/Nosology.Data.csproj
+++ b/src/Nosology.Data/Nosology.Data.csproj
@@ -40,8 +40,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entities\Document.cs" />
+    <Compile Include="Entities\File.cs" />
     <Compile Include="Entities\User.cs" />
-    <Compile Include="QueryProcessors\IUserQueryProcessor.cs" />
+    <Compile Include="Exceptions\RootObjectNotFoundException.cs" />
+    <Compile Include="QueryProcessors\IAllDocumentsQueryProcessor.cs" />
+    <Compile Include="QueryProcessors\IAllFilesQueryProcessor.cs" />
+    <Compile Include="QueryProcessors\IUserByCredentialsQueryProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
