Added : Authentication based in asp.net Identity

--- a/lib/repositories.config
+++ b/lib/repositories.config
@@ -2,6 +2,8 @@
 <repositories>
   <repository path="..\src\Nosology.Common\packages.config" />
   <repository path="..\src\Nosology.Console.App\packages.config" />
+  <repository path="..\src\Nosology.Data.Sql\packages.config" />
+  <repository path="..\src\Nosology.Models\packages.config" />
   <repository path="..\src\Nosology.Web.App.Tests\packages.config" />
   <repository path="..\src\Nosology.Web.App\packages.config" />
   <repository path="..\src\Nosology.Web.Common\packages.config" />
