--- a/src/Nosology.Models/Nosology.Models.csproj
+++ b/src/Nosology.Models/Nosology.Models.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\lib\Microsoft.AspNet.Identity.Core.2.2.1\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -42,14 +46,21 @@
     <Compile Include="Document.cs" />
     <Compile Include="ModelBinder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\DocumentsRepository.cs" />
-    <Compile Include="Repositories\IDocumentsRepository.cs" />
-    <Compile Include="Repositories\IMainTextBlockRepository.cs" />
+    <Compile Include="Repositories\DocumentsRepository.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Repositories\IDocumentsRepository.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Repositories\IMainTextBlockRepository.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Repositories\IUserRepository.cs" />
-    <Compile Include="Repositories\MainTextBlockRepository.cs" />
-    <Compile Include="Repositories\UserRepository.cs" />
-    <Compile Include="Services\ILoginService.cs" />
-    <Compile Include="Services\StupidLoginService.cs" />
+    <Compile Include="Repositories\MainTextBlockRepository.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Repositories\UserIdentityRepository.cs" />
+    <Compile Include="Services\UserManagerService.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -65,7 +76,9 @@
   <ItemGroup>
     <Content Include="Repositories\_readme.txt" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
