--- a/src/Nosology.Web.App/packages.config
+++ b/src/Nosology.Web.App/packages.config
@@ -5,6 +5,8 @@
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net451" />
   <package id="log4net" version="2.0.5" targetFramework="net451" />
   <package id="material-design-lite" version="1.1.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc.ru" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net451" />
@@ -14,6 +16,11 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages.ru" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net451" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net451" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net451" />
+  <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net451" />
+  <package id="Microsoft.Owin.Security.Cookies" version="2.1.0" targetFramework="net451" />
+  <package id="Microsoft.Owin.Security.OAuth" version="2.1.0" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Modernizr" version="2.6.2" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net451" />
@@ -21,6 +28,7 @@
   <package id="Ninject.MVC5" version="3.2.1.0" targetFramework="net451" />
   <package id="Ninject.Web.Common" version="3.2.3.0" targetFramework="net451" />
   <package id="Ninject.Web.Common.WebHost" version="3.2.3.0" targetFramework="net451" />
+  <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="Respond" version="1.2.0" targetFramework="net451" />
   <package id="WebActivatorEx" version="2.1.0" targetFramework="net451" />
   <package id="WebGrease" version="1.6.0" targetFramework="net451" />
