--- a/src/Nosology.Data.Xml/Nosology.Data.Xml.csproj
+++ b/src/Nosology.Data.Xml/Nosology.Data.Xml.csproj
@@ -41,6 +41,10 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryProcessors\AllDocumentsQueryProcessor.cs" />
+    <Compile Include="SerializbleEntities\DocumentNode.cs" />
+    <Compile Include="SerializbleEntities\DocumentNodesCollection.cs" />
+    <Compile Include="SerializbleEntities\FileNode.cs" />
+    <Compile Include="SerializbleEntities\FilesNodesCollection.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Nosology.Data\Nosology.Data.csproj">
