--- a/src/Nosology.Models/Nosology.Models.csproj
+++ b/src/Nosology.Models/Nosology.Models.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Document.cs" />
+    <Compile Include="File.cs" />
     <Compile Include="ModelBinder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\DocumentsRepository.cs">
