--- a/src/Nosology.Web.Common/packages.config
+++ b/src/Nosology.Web.Common/packages.config
@@ -2,10 +2,13 @@
 <packages>
   <package id="log4net" version="2.0.5" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net451" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net451" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net451" />
   <package id="Ninject.MVC5" version="3.2.1.0" targetFramework="net451" />
   <package id="Ninject.Web.Common" version="3.2.3.0" targetFramework="net451" />
   <package id="Ninject.Web.Common.WebHost" version="3.2.3.0" targetFramework="net451" />
+  <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="WebActivatorEx" version="2.1.0" targetFramework="net451" />
 </packages>
