Added : title changing

--- a/src/Nosology.Web.App/Nosology.Web.App.csproj
+++ b/src/Nosology.Web.App/Nosology.Web.App.csproj
@@ -234,6 +234,7 @@
     <Content Include="Views\Downloads\Index.cshtml" />
     <Content Include="Views\Documents\IndexPartial.cshtml" />
     <Content Include="Views\Home\IndexPartial.cshtml" />
+    <Content Include="Views\Home\DocumentsPartial.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
