--- a/src/Nosology.Data.Xml/Nosology.Data.Xml.csproj
+++ b/src/Nosology.Data.Xml/Nosology.Data.Xml.csproj
@@ -41,16 +41,21 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryProcessors\AllDocumentsQueryProcessor.cs" />
+    <Compile Include="QueryProcessors\AllFilesQueryProcessor.cs" />
     <Compile Include="SerializbleEntities\DocumentNode.cs" />
     <Compile Include="SerializbleEntities\DocumentNodesCollection.cs" />
     <Compile Include="SerializbleEntities\FileNode.cs" />
     <Compile Include="SerializbleEntities\FilesNodesCollection.cs" />
+    <Compile Include="EntiryDeSerializer.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Nosology.Data\Nosology.Data.csproj">
       <Project>{829fe671-5ba5-45be-a12d-8c0a9f077c19}</Project>
       <Name>Nosology.Data</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="QueryProcessors\readme.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
