--- a/src/Nosology.Web.App/Web.config
+++ b/src/Nosology.Web.App/Web.config
@@ -45,6 +45,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5.1" />
     <httpRuntime targetFramework="4.5.1" />
+    <customErrors mode="RemoteOnly"/>
     <!--<authentication mode="Forms">
       <forms loginUrl="~/Account/Index" name=".ASPXFORMSAUTH" defaultUrl="~/Home/Index" />
     </authentication>-->
